Add in Region Support (#3)
Think big!  We should be able to support federating clouds together,
just as we federate identity, so make it so!  Anything region specific
needs to index a region at the API, and let the rest be abstracted
including site specific endpoints, credentials and configurations.  We
can now start to consider other things than openstack if the need
arises.  More pertinently we can also start thinking about moving the
provider to the site itself to prevent leaking credentials in the
honeypot at the center!  This _also_ means, we could perhaps think about
not actually exposing the cloud API at all, and doing everything via the
secure proxy... ugh, I'm exciting myself!!
